# solana-byte-store

./: Anchor.toml  README.md  package-lock.json  package.json
app/: index.ts
app/instruction/: create-byte-account.ts  create-escrow.ts  delete-byte-account.ts  delete-escrow.ts  delete-version-account.ts  update-byte-account.ts  update-escrow.ts
app/pda/: byte-account.ts  metadata-account.ts  version-account.ts
app/prompts/: prompt-default-owner.ts  prompt-encryption.ts  prompt-instruction-accounts.ts  prompt-instruction-arguments.ts  prompt-instruction-or-query.ts  prompt-instruction.ts  prompt-keypair.ts  prompt-query-arguments.ts  prompt-query.ts  prompt-rpc-url.ts
app/query/: get-byte-account-by-id.ts  get-byte-accounts-by-owner.ts  get-byte-accounts-for-n-versions.ts  get-decrypted-bytes-by-id.ts  get-decrypted-bytes-for-n-versions.ts  get-metadata-account-by-id.ts  get-metadata-accounts-by-owner.ts  get-version-account-by-id.ts  get-version-accounts-by-owner.ts
app/util/: decrypt-aes-key.ts  decrypt-bytes-aes.ts  derive-rsa-keypair.ts  encrypt-aes-key.ts  encrypt-bytes-aes.ts  generate-aes-key.ts  generate-checksum.ts  (+2 more)
programs/solana-byte-store/: Cargo.toml
programs/solana-byte-store/src/: error.rs  lib.rs  state.rs
programs/solana-byte-store/src/instructions/: append_byte_account.rs  create_byte_account.rs  create_byte_store.rs  delete_byte_account.rs  delete_byte_store.rs  delete_version_account.rs  mod.rs  update_byte_account.rs  update_byte_store.rs
programs/solana-byte-store/src/util/: checksum.rs  mod.rs
tests/: solana-byte-store.ts
